--- a/FE/package.json
+++ b/FE/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
