--- a/FE/package.json
+++ b/FE/package.json
@@ -11,10 +11,20 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.14.2",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,6 +40,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "recharts": "^2.15.4",
     "swiper": "^11.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
