update CRUD attribute and attributeValue

--- a/FE/package.json
+++ b/FE/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-table": "^8.21.3",
+    "@tinymce/tinymce-react": "^6.2.1",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,6 +55,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.7",
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^24.0.3",
