--- a/FE/package.json
+++ b/FE/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@lottiefiles/dotlottie-react": "^0.14.2",
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
