done validate add product

--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -6,6 +6,11 @@
       ]
     }
   },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "build"
+  ],
   "files": [],
   "references": [
     {
