--- a/BE/package.json
+++ b/BE/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
+    "nanoid": "^5.1.5",
     "slugify": "^1.6.6"
   }
 }
