--- a/BE/package.json
+++ b/BE/package.json
@@ -24,6 +24,8 @@
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
     "nanoid": "^5.1.5",
+    "pdfkit": "^0.17.1",
+    "puppeteer": "^24.16.1",
     "slugify": "^1.6.6"
   }
 }
