--- a/FE/package.json
+++ b/FE/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.1.0",
+    "input-otp": "^1.4.2",
     "joi": "^17.13.3",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
